feat: double no longer returns hand status
